test/Dialect/LLZK/functions_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found 'i32'}}
llzk.func private @fail_01(i32)
// -----
// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found 'i32'}}
llzk.func private @fail_02(i1) -> i32
// -----
// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found 'i32'}}
llzk.func private @fail_03(i1) -> (i32, i32)
// -----
// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found 'i32'}}
llzk.func private @fail_04(i1, index, i32)
// -----
// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found 'none'}}
llzk.func @fail_05(%x: i1) -> none {
  return
}
// -----
// expected-error@+1 {{'llzk.func' op expected a valid LLZK type but found '(i1) -> i32'}}
llzk.func @fail_06(%x: (i1) -> i32) -> index {
  return
}
// -----
llzk.func @fail_07() {
  // expected-error@+1 {{'llzk.func' op expects parent op to be one of 'builtin.module, llzk.struct'}}
  llzk.func @inner() {
    return
  }
  return
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @user() {
    // expected-error@+2 {{'llzk.call' op references unknown symbol "@missing_fn"}}
    // expected-error@+1 {{expected 'llzk.func' named "@missing_fn"}}
    llzk.call @missing_fn() : () -> ()
    return
  }
}
// -----
module { // expected-note {{unnamed 'builtin.module' here}}
  llzk.func @user() {
    // expected-error@+2 {{'llzk.call' op has ancestor 'builtin.module' without "veridise.lang" attribute or a name}}
    // expected-error@+1 {{expected 'llzk.func' named "@missing_fn"}}
    llzk.call @missing_fn() : () -> ()
    return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'llzk.func' op references unknown symbol "@WasNotDefined"}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@WasNotDefined"}}
  llzk.func @constrain(%p: !llzk.struct<@WasNotDefined>) {
    return
  }
}
// -----
module { // expected-note {{unnamed 'builtin.module' here}}
  // expected-error@+2 {{'llzk.func' op has ancestor 'builtin.module' without "veridise.lang" attribute or a name}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@MissingComponent"}}
  llzk.func @constrain(%p: !llzk.struct<@MissingComponent>) {
    return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'llzk.func' op references unknown symbol "@WasNotDefined"}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@WasNotDefined"}}
  llzk.func @f(%0: i1, %1: i1, %2: i1, %3: i1, %4: i1, %5: i1, %6: i1, %7: !llzk.struct<@WasNotDefined>) {
    return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'llzk.func' op references unknown symbol "@WasNotDefined"}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@WasNotDefined"}}
  llzk.func private @f(%0: i1, %1: i1, %2: i1, %3: i1, %4: i1, %5: i1, %6: i1) -> !llzk.struct<@WasNotDefined>
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'llzk.func' op references unknown symbol "@WasNotDefined"}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@WasNotDefined"}}
  llzk.func private @f(%0: i1, %1: i1, %2: i1, %3: i1, %4: i1, %5: i1, %6: i1) -> (!llzk.felt, i1, !llzk.struct<@WasNotDefined>)
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+8 {{'llzk.func' op references unknown symbol "@A"}}
  // expected-error@+7 {{could not find 'llzk.struct' named "@A"}}
  // expected-error@+6 {{'llzk.func' op references unknown symbol "@B"}}
  // expected-error@+5 {{could not find 'llzk.struct' named "@B"}}
  // expected-error@+4 {{'llzk.func' op references unknown symbol "@C"}}
  // expected-error@+3 {{could not find 'llzk.struct' named "@C"}}
  // expected-error@+2 {{'llzk.func' op references unknown symbol "@D"}}
  // expected-error@+1 {{could not find 'llzk.struct' named "@D"}}
  llzk.func private @f(%1: !llzk.struct<@A>, %7: !llzk.struct<@B>) -> (!llzk.struct<@C>, !llzk.struct<@D>)
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @identity(%x: index) -> (index) { // expected-note {{callee defined here}}
    return %x : index
  }
  llzk.func @user(%x: !llzk.felt) -> (index) {
    // expected-error@+1 {{'llzk.call' op incorrect number of operands for callee, expected 1}}
    %1 = llzk.call @identity(%x, %x) : (!llzk.felt, !llzk.felt) -> (index)
    return %1 : index
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @identity(%x: index) -> (index) {
    return %x : index
  }
  llzk.func @user(%x: !llzk.felt) -> (index) {
    // expected-error@+1 {{'llzk.call' op operand type mismatch: expected type 'index', but found '!llzk.felt' for operand number 0}}
    %1 = llzk.call @identity(%x) : (!llzk.felt) -> (index)
    return %1: index
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @split(%x: index) -> (index, index) { // expected-note {{callee defined here}}
    %0 = arith.constant 1 : index
    return %x, %0 : index, index
  }
  llzk.func @user(%x: index) -> index {
    // expected-error@+1 {{'llzk.call' op incorrect number of results for callee, expected 2}}
    %1 = llzk.call @split(%x) : (index) -> (index)
    return %1 : index
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.func @split(%x: index) -> (index, index) {
    %0 = arith.constant 1 : index
    return %x, %0 : index, index
  }
  llzk.func @user(%x: index) -> (i1, i1) {
    // expected-error@+1 {{'llzk.call' op result type mismatch: expected type 'index', but found 'i1' for result number 0}}
    %1, %2 = llzk.call @split(%x) : (index) -> (i1, i1)
    return %1, %2 : i1, i1
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA1 {
    func @compute() -> !llzk.struct<@ComponentA1> { // expected-note {{callee defined here}}
      %self = new_struct : !llzk.struct<@ComponentA1>
      return %self : !llzk.struct<@ComponentA1>
    }
    func @constrain(%self: !llzk.struct<@ComponentA1>) { return }
  }

  llzk.struct @ComponentA2 {
    func @compute(%0: !llzk.felt) -> !llzk.struct<@ComponentA2> {
      %self = new_struct : !llzk.struct<@ComponentA2>
      // expected-error@+1 {{'llzk.call' op incorrect number of operands for callee, expected 0}}
      %x = call @ComponentA1::@compute(%0) : (!llzk.felt) -> (!llzk.struct<@ComponentA1>)
      return %self : !llzk.struct<@ComponentA2>
    }

    func @constrain(%self: !llzk.struct<@ComponentA2>) { return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentB1 {
    func @compute() -> !llzk.struct<@ComponentB1> {
      %self = new_struct : !llzk.struct<@ComponentB1>
      return %self : !llzk.struct<@ComponentB1>
    }
    func @constrain(%self: !llzk.struct<@ComponentB1>) { return }
  }

  llzk.struct @ComponentB2 {
    func @compute(%0: !llzk.struct<@ComponentB1>) -> !llzk.struct<@ComponentB2> {
      %self = new_struct : !llzk.struct<@ComponentB2>
      return %self : !llzk.struct<@ComponentB2>
    }

    func @constrain(%self: !llzk.struct<@ComponentB2>, %0: !llzk.felt) {
      // expected-error@+1 {{'llzk.call' op operand type mismatch: expected type '!llzk.struct<@ComponentB1>', but found '!llzk.felt' for operand number 0}}
      call @ComponentB1::@constrain(%0) : (!llzk.felt) -> ()
      return
    }
  }
}
